adicionando documentação da api para parte de exportar csv
